--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -21,6 +21,7 @@
             <div>
                 <h2>
                     <%= movie.title %>
+                        <%= movie.test %>
                 </h2>
                 <p>by
                     <a href="#">
