setters create virtual field and modify db

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -20,9 +20,10 @@
         <%- include('partials/navbar') %>
             <div>
                 <h2>
-                    <%= movie.title %>
+                    <%= movie.alphabet %>
                         <hr/>
                         <%= movie.test %>
+
                 </h2>
                 <p>by
                     <a href="#">
